[gd_scene load_steps=34 format=2]

[ext_resource path="res://PlayerBoard.gd" type="Script" id=1]
[ext_resource path="res://Dice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/rolling dice/dice_faces.png" type="Texture" id=4]
[ext_resource path="res://Assets/black_hole.png" type="Texture" id=5]
[ext_resource path="res://Assets/finger.png" type="Texture" id=6]
[ext_resource path="res://Assets/toilet.png" type="Texture" id=7]
[ext_resource path="res://hitHurt (1).wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=9]
[ext_resource path="res://Assets/empty_ball.png" type="Texture" id=10]
[ext_resource path="res://Game.gd" type="Script" id=11]
[ext_resource path="res://Assets/font/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/rolling dice/empty_dice_health.png" type="Texture" id=13]
[ext_resource path="res://Assets/rolling dice/dice_faces_health.png" type="Texture" id=14]
[ext_resource path="res://Assets/basket.png" type="Texture" id=15]
[ext_resource path="res://basket.gd" type="Script" id=16]
[ext_resource path="res://Assets/suction_tube.png" type="Texture" id=17]
[ext_resource path="res://Assets/door.png" type="Texture" id=18]
[ext_resource path="res://Assets/jar.png" type="Texture" id=19]
[ext_resource path="res://pickupCoin.wav" type="AudioStream" id=20]
[ext_resource path="res://BeepBox-Song (1).wav" type="AudioStream" id=21]

[sub_resource type="CircleShape2D" id=7]
radius = 15.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 57, 386.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 70, 490 )

[sub_resource type="Animation" id=14]
resource_name = "black_hole"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 100, 30 ), Rect2( 100, 0, 100, 30 ), Rect2( 200, 0, 100, 30 ) ]
}

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 35.5, 10 )

[sub_resource type="DynamicFont" id=15]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=20]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 9, 0.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 24, 21.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 305, 167.5 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = ExtResource( 12 )

[node name="Game" type="Node2D"]
script = ExtResource( 11 )

[node name="Dice" parent="." instance=ExtResource( 2 )]

[node name="PlayerBall" type="KinematicBody2D" parent="." groups=["incrementor"]]
position = Vector2( 67, 13 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerBall"]
shape = SubResource( 7 )

[node name="Hand" type="Sprite" parent="PlayerBall"]
z_index = 7
texture = ExtResource( 6 )

[node name="Ball" type="Sprite" parent="PlayerBall"]
z_index = 6
texture = ExtResource( 10 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( -56, -180.5 )
shape = SubResource( 9 )

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 370, -192 )
shape = SubResource( 12 )

[node name="BlackHole" type="Area2D" parent="."]
position = Vector2( 95, 379 )
rotation = -1.57079
z_index = 2

[node name="Sprite" type="Sprite" parent="BlackHole"]
position = Vector2( 244, 194 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 100, 0, 100, 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackHole"]
autoplay = "black_hole"
anims/black_hole = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackHole"]
position = Vector2( 241.501, 204.998 )
shape = SubResource( 22 )

[node name="BackgroundItems" type="Node2D" parent="."]
z_index = -2

[node name="Sprite" type="Sprite" parent="BackgroundItems"]
position = Vector2( 251, 139 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )

[node name="Sprite3" type="Sprite" parent="BackgroundItems"]
position = Vector2( 148, 51 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 80, 0, 20, 20 )

[node name="Sprite2" type="Sprite" parent="BackgroundItems"]
position = Vector2( 260, 11 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 100, 0, 20, 20 )

[node name="Sprite4" type="Sprite" parent="BackgroundItems"]
position = Vector2( 44, 228 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 20, 0, 20, 20 )

[node name="Sprite5" type="Sprite" parent="BackgroundItems"]
position = Vector2( 254, 170 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 40, 0, 20, 20 )

[node name="Arrow" type="Sprite" parent="BackgroundItems"]
position = Vector2( 260, 27 )
texture = ExtResource( 9 )

[node name="Arrow3" type="Sprite" parent="BackgroundItems"]
position = Vector2( 148, 35 )
rotation = 3.14159
texture = ExtResource( 9 )

[node name="Arrow5" type="Sprite" parent="BackgroundItems"]
position = Vector2( 254, 186 )
texture = ExtResource( 9 )

[node name="Arrow4" type="Sprite" parent="BackgroundItems"]
position = Vector2( 28, 228 )
rotation = 1.5708
texture = ExtResource( 9 )

[node name="Arrow2" type="Sprite" parent="BackgroundItems"]
position = Vector2( 268, 139 )
rotation = -1.5708
texture = ExtResource( 9 )

[node name="Health_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 32.0
margin_top = 23.0
margin_right = 32.0
margin_bottom = 23.0
text = "-1"

[node name="Health_popup2" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 32.0
margin_top = 23.0
margin_right = 32.0
margin_bottom = 23.0
text = "+1"

[node name="Door_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_top = 184.0
margin_bottom = 184.0
text = "+2"

[node name="Basket_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 118.0
margin_top = 180.0
margin_right = 118.0
margin_bottom = 180.0
text = "+6"

[node name="Jar_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 213.0
margin_top = 203.0
margin_right = 213.0
margin_bottom = 203.0
text = "+3"

[node name="Hole_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 231.0
margin_top = 112.0
margin_right = 231.0
margin_bottom = 112.0
text = "+1"

[node name="tube_popup2" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 138.0
margin_top = 61.0
margin_right = 138.0
margin_bottom = 61.0
text = "+5"

[node name="toilet_popup" parent="BackgroundItems" instance=ExtResource( 3 )]
margin_left = 231.0
margin_top = 80.0
margin_right = 231.0
margin_bottom = 80.0
text = "+4"

[node name="Toilet" type="StaticBody2D" parent="."]
position = Vector2( 0, -15 )
z_index = 1

[node name="Toilet" type="Area2D" parent="Toilet"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toilet/Toilet"]
polygon = PoolVector2Array( 252, 58, 275, 58, 279, 67, 253, 66 )

[node name="Toilet2" type="Sprite" parent="Toilet"]
position = Vector2( 276, 59 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toilet"]
polygon = PoolVector2Array( 246, 55, 246, 63, 248, 66, 250, 70, 253, 72, 255, 74, 257, 74, 260, 83, 246, 83, 246, 96, 306, 96, 306, 83, 283, 83, 283, 80, 285, 74, 286, 64, 296, 56, 297, 29, 298, 20, 275, 20, 274, 54, 276, 61, 279, 66, 277, 72, 260, 71, 255, 70, 253, 65, 252, 60, 251, 55 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="score" type="Label" parent="CanvasLayer"]
margin_top = 66.0
margin_right = 300.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 15 )
text = "0"
align = 1

[node name="score2" type="Label" parent="CanvasLayer"]
margin_top = 169.0
margin_right = 300.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 20 )
text = "lvl 1"
align = 1

[node name="health" type="Label" parent="CanvasLayer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 16 )
text = "HP:"

[node name="empty" type="Sprite" parent="CanvasLayer/health"]
position = Vector2( 39, 9 )
texture = ExtResource( 13 )

[node name="value" type="Sprite" parent="CanvasLayer/health"]
position = Vector2( 39, 9 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 100, 0, 20, 20 )

[node name="basket" type="StaticBody2D" parent="."]
position = Vector2( 95, 51 )
z_index = 2
script = ExtResource( 16 )

[node name="Area2D" type="Area2D" parent="basket"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="basket/Area2D"]
polygon = PoolVector2Array( 21, 186, 45, 186, 41, 194, 25, 194 )

[node name="Basket" type="Sprite" parent="basket"]
position = Vector2( 33, 184 )
texture = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="basket"]
polygon = PoolVector2Array( 47, 184, 47, 190, 43, 196, 37, 199, 29, 199, 24, 196, 20, 192, 19, 184, 21, 183, 21, 189, 25, 194, 30, 194, 38, 194, 41, 194, 44, 189, 45, 184 )

[node name="Arrow" type="Sprite" parent="basket"]
position = Vector2( 33, 171 )
z_index = -1
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="basket"]
position = Vector2( 33, 156 )
z_index = -1
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 60, 0, 20, 20 )

[node name="suctiontube" type="StaticBody2D" parent="."]
z_index = 1

[node name="SuctionTube" type="Sprite" parent="suctiontube"]
position = Vector2( 148, 13 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="suctiontube"]
polygon = PoolVector2Array( 128, 28, 133, 28, 133, 20, 136, 16, 157, 17, 163, 20, 163, 26, 163, 28, 168, 28, 168, 19, 159, 10, 156, 10, 156, -2, 141, -2, 141, 10, 137, 10, 128, 19 )

[node name="tube" type="Area2D" parent="suctiontube"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="suctiontube/tube"]
polygon = PoolVector2Array( 133, 24, 163, 24, 163, 20, 132, 20 )

[node name="door" type="StaticBody2D" parent="."]

[node name="Door" type="Sprite" parent="door"]
position = Vector2( 15, 220 )
z_index = -1
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2( 9, 249.5 )
shape = SubResource( 17 )

[node name="door" type="Area2D" parent="door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door/door"]
position = Vector2( -23, 227 )
shape = SubResource( 21 )

[node name="jar" type="StaticBody2D" parent="."]
position = Vector2( 49, 190 )
z_index = 2

[node name="Jar" type="Sprite" parent="jar"]
position = Vector2( 207, 30 )
texture = ExtResource( 19 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="jar"]
polygon = PoolVector2Array( 184, 5, 198, 19, 198, 23, 192, 23, 189, 27, 189, 55, 192, 60, 219, 60, 222, 56, 222, 27, 219, 23, 213, 23, 213, 19, 227, 5, 224, 5, 210, 18, 201, 18, 187, 5 )

[node name="jar" type="Area2D" parent="jar"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="jar/jar"]
polygon = PoolVector2Array( 191, 9, 220, 9, 210, 18, 201, 18 )

[node name="Abyss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abyss"]
position = Vector2( 149, 440.5 )
shape = SubResource( 18 )

[node name="end" type="CanvasLayer" parent="."]
layer = 20

[node name="ColorRect" type="ColorRect" parent="end"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 300.0
color = Color( 0.878431, 0.972549, 0.815686, 1 )

[node name="score" type="Label" parent="end/ColorRect"]
margin_top = 66.0
margin_right = 300.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 15 )
text = "0"
align = 1

[node name="score3" type="Label" parent="end/ColorRect"]
margin_top = 169.0
margin_right = 300.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 20 )
text = "lvl 1"
align = 1

[node name="note" type="Label" parent="end/ColorRect"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 298.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 20 )
text = "Press space to play again"
align = 1

[node name="score2" type="Label" parent="end/ColorRect"]
margin_top = 8.0
margin_right = 300.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_fonts/font = SubResource( 19 )
text = "Game Over"
align = 1

[node name="DiceTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0
autostart = true

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
autoplay = true

[connection signal="body_entered" from="BlackHole" to="." method="_on_BlackHole_body_entered"]
[connection signal="body_entered" from="Toilet/Toilet" to="." method="_on_Toilet_body_entered"]
[connection signal="body_entered" from="basket/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="suctiontube/tube" to="." method="_on_tube_body_entered"]
[connection signal="body_entered" from="door/door" to="." method="_on_door_body_entered"]
[connection signal="body_entered" from="jar/jar" to="." method="_on_jar_body_entered"]
[connection signal="body_entered" from="Abyss" to="." method="_on_Abyss_body_entered"]
[connection signal="timeout" from="DiceTimer" to="." method="_on_DiceTimer_timeout"]
